--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <a
                         class="nav__cta type-label-lg"
                         href="#"
-                        target="_blank"
+                        target="https://docs.google.com/spreadsheets/d/1FaJVCXwUWFMjZQ6hhfqGezZhJgSjZTHmAzlnhICEhrI/edit?usp=sharing"
                         >Submit Record</a
                     >
                 </div>
