--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 <router-link class="nav__tab" to="/roulette">
                     <span class="type-label-lg">Roulette</span>
                 </router-link>
+                <router-link class="nav__tab" to="/changelog">
+                    <span class="type-label-lg">Changelog</span>
+                </router-link>
                 <div class="nav__actions">
                     <button
                         class="nav__icon"
@@ -67,8 +70,8 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="#"
-                        target="https://docs.google.com/spreadsheets/d/1FaJVCXwUWFMjZQ6hhfqGezZhJgSjZTHmAzlnhICEhrI/edit?usp=sharing"
+                        href="https://docs.google.com/spreadsheets/d/1FaJVCXwUWFMjZQ6hhfqGezZhJgSjZTHmAzlnhICEhrI/edit?usp=sharing"
+                        target=""
                         >Submit Record</a
                     >
                 </div>
